# tech-challenge-book-api

./: Dockerfile  README.md  books.csv  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: deploy.yml
api/: main.py
api/auth/: auth_db.py  jwt_utils.py
api/users/: user.py
data/csv/: academic.csv  add-a-comment.csv  adult-fiction.csv  all_books_with_images.csv  art.csv  autobiography.csv  biography.csv  business.csv  childrens.csv  christian-fiction.csv  christian.csv  classics.csv  contemporary.csv  crime.csv  cultural.csv  default.csv  erotica.csv  fantasy.csv  fiction.csv  food-and-drink.csv  health.csv  historical-fiction.csv  historical.csv  history.csv  horror.csv  humor.csv  music.csv  mystery.csv  new-adult.csv  nonfiction.csv  novels.csv  poetry.csv  (+19 more)
devops/: clear_docker.sh  start_local.ps1  start_local.sh
http/: admin.http  login.http  private.http  refresh.http  scrapper.http  version.http
init/: 01-schema.sql  02-seed.sql
notebooks/: post-transform-analysis.ipynb  pre-transform-analysis.ipynb  recommendation.ipynb
ops_scripts/: start_api.sh  start_local.sh
scripts/: cleaning.py  cleaning_pipeline.py  configs.py  data_cleaner.py  data_transformer.py  exploratory.py  exploratory_data_analysis.py  feature_engineering.py  feature_pipeline.py  features.py  main_pipeline.py  pipeline_ETL.py  pipeline_runner.py  run_pipeline.py  scraper_lib.py  script.py  transformation.py  utils.py
smoke_tests/: authentication.py  docs.py  main.py
src/: app.py
unit_tests/: test_cleaning.py  test_exploratory_data_analysis.py
(+41 files in other folders)
