[project]
name = "tech-challenge-book-api"
version = "0.1.0"
description = "REST Api for ML Engineering Tech Challenge"
authors = [
    {name = "Almost Intelligent Group"}
]
readme = "README.md"
requires-python = ">=3.11 <=3.13.7"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
